UI - Login, Display

--- a/templates/chronological_tweet_display.html
+++ b/templates/chronological_tweet_display.html
@@ -1,35 +1,35 @@
-<!DOCTYPE html>
-<html>
-<head>
- <title></title>
-</head>
-<body>
-<style>
+{% extends "layout.html" %}
+{% block content %}
+    <div class="content-section">
+        <style>
  
- td {
-        width: 450px;
-        text-align: center;
-        border: 1px solid black;
-        padding: 5px;
-      }
-</style>
-<table>
-  <thead>
-    <tr>
-        <th>USER ID</th>
-        <th>Tweet</th>
-        <th>Timestamp</th>
-    </tr>
-    </thead>    
-    <tbody>
-     {% for row in data %}    
-            <tr>
-                <td>{{row[0]}}</td>
-                <td>{{row[1]}}</td>
-                <td>{{row[2]}}</td>
-            </tr>
-        {% endfor %}
-    </tbody>
-</table>
-</body>
-</html>
+            td {
+                   width: 450px;
+                   text-align: center;
+                   border: 1px solid black;
+                   padding: 5px;
+                 }
+        </style>
+           
+        <table>
+            <thead>
+              <tr>
+                  <th>USER ID</th>
+                  <th>Tweet</th>
+                  <th>Timestamp</th>
+              </tr>
+              </thead>    
+              <tbody>
+               {% for row in data %}    
+                      <tr>
+                          <td>{{row[0]}}</td>
+                          <td>{{row[1]}}</td>
+                          <td>{{row[2]}}</td>
+                      </tr>
+                  {% endfor %}
+              </tbody>
+          </table>
+          
+
+    </div>
+{% endblock content %}
